tests/parser/constant_err3.mtp
(* constants *)
const test :=10;
floop := 1337;
(*missing end quote*)
three := 'Stringify;

begin

end
.